Fix nav logo position and some spacing

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -1,7 +1,11 @@
 
 .navbar-brand {
   display: inline-block;
-  padding: 1rem;
+  padding: 15px 0 15px 15px;
+
+  @media (max-width: @screen-sm-max) {
+    padding: 1rem;
+  }
 
   @media (min-width: @screen-md) {
     height: 100%;
